crates/runtime/tests/delta_lake/snapshots/integration__delta_lake__query_delta_lake_with_partition_pruning.snap
---
source: crates/runtime/tests/delta_lake/mod.rs
expression: pretty_explain_plan
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: test.date_col ASC NULLS LAST, test.name ASC NULLS LAST, test.value ASC NULLS LAST                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |   BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |     Filter: test.date_col > Date32("2025-01-01")                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
|               |       TableScan: test projection=[date_col, name, value], partial_filters=[test.date_col > Date32("2025-01-01")]                                                                                                                                                                                                                                                                                                                                                                                     |
| physical_plan | SortPreservingMergeExec: [date_col@0 ASC NULLS LAST, name@1 ASC NULLS LAST, value@2 ASC NULLS LAST]                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |   SortExec: expr=[date_col@0 ASC NULLS LAST, name@1 ASC NULLS LAST, value@2 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                            |
|               |     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
|               |         FilterExec: date_col@0 > 2025-01-01                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |             ParquetExec: file_groups={1 group: [[private/var/folders/rz/l9sr0lmd5xz2q37n0q02_zd40000gn/T/delta_table_partition/delta_table_partition/date_col=%2B10999-12-31/part-00001-acb2cb29-17d5-4445-b195-24bb5d8b9d6d-c000.snappy.parquet, private/var/folders/rz/l9sr0lmd5xz2q37n0q02_zd40000gn/T/delta_table_partition/delta_table_partition/date_col=2030-06-15/part-00001-f8ac61ae-9b5e-49a8-a1e7-5aeb7e6ea93e-c000.snappy.parquet]]}, projection=[date_col, name, value], predicate=true |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
