crates/runtime/tests/delta_lake/snapshots/integration__delta_lake__ts_between_jan03_jan05.snap
---
source: crates/runtime/tests/delta_lake/mod.rs
description: "Query: SELECT * FROM events WHERE event_ts BETWEEN '2025-01-03' AND '2025-01-05'"
---
+---------------+-------------------------------+
| plan_type     | plan                          |
+---------------+-------------------------------+
| physical_plan | ┌───────────────────────────┐ |
|               | │     BytesProcessedExec    │ |
|               | │    --------------------   │ |
|               | │     BytesProcessedExec    │ |
|               | └─────────────┬─────────────┘ |
|               | ┌─────────────┴─────────────┐ |
|               | │       DataSourceExec      │ |
|               | │    --------------------   │ |
|               | │          files: 2         │ |
|               | │      format: parquet      │ |
|               | │                           │ |
|               | │         predicate:        │ |
|               | │        event_ts >=        │ |
|               | │         1735862400        │ |
|               | │   000000 AND event_ts <=  │ |
|               | │    1736035200000000 AND   │ |
|               | │         event_ts >=       │ |
|               | │        173586240000       │ |
|               | │    0000 AND event_ts <=   │ |
|               | │      1736035200000000     │ |
|               | └───────────────────────────┘ |
|               |                               |
+---------------+-------------------------------+
