crates/runtime/tests/delta_lake/snapshots/integration__delta_lake__ts_gte_jan10.snap
---
source: crates/runtime/tests/delta_lake/mod.rs
description: "Query: SELECT * FROM events WHERE event_ts >= '2025-01-10'"
---
+---------------+-------------------------------+
| plan_type     | plan                          |
+---------------+-------------------------------+
| physical_plan | ┌───────────────────────────┐ |
|               | │     BytesProcessedExec    │ |
|               | │    --------------------   │ |
|               | │     BytesProcessedExec    │ |
|               | └─────────────┬─────────────┘ |
|               | ┌─────────────┴─────────────┐ |
|               | │       DataSourceExec      │ |
|               | │    --------------------   │ |
|               | │          files: 1         │ |
|               | │      format: parquet      │ |
|               | │                           │ |
|               | │         predicate:        │ |
|               | │        event_ts >=        │ |
|               | │         1736467200        │ |
|               | │   000000 AND event_ts >=  │ |
|               | │      1736467200000000     │ |
|               | └───────────────────────────┘ |
|               |                               |
+---------------+-------------------------------+
