crates/runtime/tests/delta_lake/snapshots/integration__delta_lake__ts_lt_jan03.snap
---
source: crates/runtime/tests/delta_lake/mod.rs
description: "Query: SELECT * FROM events WHERE event_ts < '2025-01-03'"
---
+---------------+-------------------------------+
| plan_type     | plan                          |
+---------------+-------------------------------+
| physical_plan | ┌───────────────────────────┐ |
|               | │     BytesProcessedExec    │ |
|               | │    --------------------   │ |
|               | │     BytesProcessedExec    │ |
|               | └─────────────┬─────────────┘ |
|               | ┌─────────────┴─────────────┐ |
|               | │       DataSourceExec      │ |
|               | │    --------------------   │ |
|               | │          files: 2         │ |
|               | │      format: parquet      │ |
|               | │                           │ |
|               | │         predicate:        │ |
|               | │         event_ts <        │ |
|               | │          173586240        │ |
|               | │   0000000 AND event_ts <  │ |
|               | │      1735862400000000     │ |
|               | └───────────────────────────┘ |
|               |                               |
+---------------+-------------------------------+
